--- a/app/views/admin/collections/shared/_form.html.erb
+++ b/app/views/admin/collections/shared/_form.html.erb
@@ -63,19 +63,18 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :author_ids, 'Avuthors', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :author_ids, 'ავტორები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
         <div class="mt-2 sm:mt-0 w-full">
-          <%= form.collection_select
-                :author_ids,
-                Author.ordered,
-                :id,
-                :name_ka,
-                { selected: @collection.author_ids, inlcude_blank: true },
-                { required: true, multiple: true, data: { controller: 'multi-select' } } %>
+          <%= form.collection_select :author_ids,
+                                     Author.ordered,
+                                     :id,
+                                     :name_ka,
+                                     { selected: @collection.author_ids, inlcude_blank: true },
+                                     { required: true, multiple: true, data: { controller: 'multi-select' } } %>
         </div>
       </div>
     </div>
