--- a/app/views/admin/collections/shared/_form.html.erb
+++ b/app/views/admin/collections/shared/_form.html.erb
@@ -74,7 +74,107 @@
                                      :id,
                                      :name_ka,
                                      { selected: @collection.author_ids, inlcude_blank: true },
-                                     { required: true, multiple: true, data: { controller: 'multi-select' } } %>
+                                     { multiple: true, data: { controller: 'multi-select' } } %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
+    <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:py-3">
+        <%= form.label :translator_ids, 'მთარგმნელები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+      </div>
+    </div>
+    <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
+        <div class="mt-2 sm:mt-0 w-full">
+          <%= form.collection_select :translator_ids,
+                                     Translator.ordered,
+                                     :id,
+                                     :name_ka,
+                                     { selected: @collection.translator_ids, inlcude_blank: true },
+                                     { multiple: true, data: { controller: 'multi-select' } } %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
+    <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:py-3">
+        <%= form.label :type_ids, 'ტიპები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+      </div>
+    </div>
+    <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
+        <div class="mt-2 sm:mt-0 w-full">
+          <%= form.collection_select :type_ids,
+                                     Type.ordered,
+                                     :id,
+                                     :name_ka,
+                                     { selected: @collection.type_ids, inlcude_blank: true },
+                                     { multiple: true, data: { controller: 'multi-select' } } %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
+    <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:py-3">
+        <%= form.label :field_ids, 'დარგები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+      </div>
+    </div>
+    <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
+        <div class="mt-2 sm:mt-0 w-full">
+          <%= form.collection_select :field_ids,
+                                     Field.ordered,
+                                     :id,
+                                     :name_ka,
+                                     { selected: @collection.field_ids, inlcude_blank: true },
+                                     { multiple: true, data: { controller: 'multi-select' } } %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
+    <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:py-3">
+        <%= form.label :genre_ids, 'ჟანრები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+      </div>
+    </div>
+    <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
+        <div class="mt-2 sm:mt-0 w-full">
+          <%= form.collection_select :genre_ids,
+                                     Genre.ordered,
+                                     :id,
+                                     :name_ka,
+                                     { selected: @collection.genre_ids, inlcude_blank: true },
+                                     { multiple: true, data: { controller: 'multi-select' } } %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
+    <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:py-3">
+        <%= form.label :publishing_ids, 'გამომცემლობები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+      </div>
+    </div>
+    <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
+      <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
+        <div class="mt-2 sm:mt-0 w-full">
+          <%= form.collection_select :publishing_ids,
+                                     Publishing.ordered,
+                                     :id,
+                                     :name_ka,
+                                     { selected: @collection.publishing_ids, inlcude_blank: true },
+                                     { multiple: true, data: { controller: 'multi-select' } } %>
         </div>
       </div>
     </div>
