--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -36,6 +36,15 @@
         </div>
       </div>
       <div class="-mr-2 flex items-center">
+        <div class="hidden sm:-my-px sm:flex sm:space-x-8">
+          <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
+          <%= header_link('ავტორები', admin_authors_path) %>
+          <%= header_link('მთარგმნელები', admin_translators_path) %>
+          <%= header_link('ტიპები', admin_types_path) %>
+          <%= header_link('ჟანრები', admin_genres_path) %>
+          <%= header_link('დარგები', admin_fields_path) %>
+          <%= header_link('გამომცემლობები', admin_publishings_path) %>
+        </div>
         <button type="button" class="relative inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-mountbatten-500 focus:ring-offset-2" aria-controls="mobile-menu" aria-expanded="false">
           <!-- Menu open: "hidden", Menu closed: "block" -->
           <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
