--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -35,7 +35,7 @@
           <%= header_link('ტექსტური წყვილები', admin_text_blocks_path) %>
         </div>
       </div>
-      <div class="-mr-2 flex items-center">
+      <div class="flex">
         <div class="hidden sm:-my-px sm:flex sm:space-x-8">
           <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
           <%= header_link('ავტორები', admin_authors_path) %>
