Add hover overflow in cells

--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -46,13 +46,13 @@
                     <%= render 'admin/shared/table/row',
                                record: supergroup,
                                index: index,
-                               columns: [{ type: :text, name: :id, classes: 'font-medium text-gray-900' },
-                                         { type: :link, name: :name_ka, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: supergroup.id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
-                                         { type: :link, name: :name_en, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: supergroup.id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
-                                         { type: :text, name: :status, classes: "text-gray-500" },
-                                         { type: :text, name: :groups_count, classes: "text-gray-500" },
-                                         { type: :text, name: :collections_count, classes: "text-gray-500" },
-                                         { type: :text, name: :text_blocks_count, classes: "text-gray-500" },
+                               columns: [{ type: :text, name: :id, classes: 'font-medium text-gray-900 px-3' },
+                                         { type: :link, name: :name_ka, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: supergroup.id }, classes: "max-w-[240px] text-gray-500" },
+                                         { type: :link, name: :name_en, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: supergroup.id }, classes: "max-w-[240px] text-gray-500" },
+                                         { type: :text, name: :status, classes: "text-gray-500 px-3" },
+                                         { type: :text, name: :groups_count, classes: "text-gray-500 px-3" },
+                                         { type: :text, name: :collections_count, classes: "text-gray-500 px-3" },
+                                         { type: :text, name: :text_blocks_count, classes: "text-gray-500 px-3" },
                                          { type: :link, name: :edit, url_method: -> (**params){ edit_admin_supergroup_path(**params) }, url_params: { id: supergroup.id }, classes: "font-medium text-gray-500" }] %>
 
                   <% end %>
