Add enter link in tables

--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -56,7 +56,8 @@
                                          { type: :link, name: :name_en, url_method: -> (**params){ admin_text_blocks_path(**params) }, url_params: { collection_id: collection.id }, classes: "max-w-[240px] text-gray-500" },
                                          { type: :text, name: :status, classes: "text-gray-500 px-3" },
                                          { type: :text, name: :text_blocks_count, classes: "text-gray-500 px-3" },
-                                         { type: :link, name: :edit, url_method: -> (**params){ edit_admin_collection_path(**params) }, url_params: { id: collection.id }, classes: "font-medium text-gray-500" }] %>
+                                         { type: :links, classes: "font-medium text-gray-500 max-w-[60px]", elements: [{ name: :edit, url_method: -> (**params){ edit_admin_collection_path(**params) }, url_params: { id: collection.id } },
+                                                                                                                       { name: :enter, url_method: -> (**params){ admin_text_blocks_path(**params) }, url_params: { collection_id: collection.id } }] }] %>
                   <% end %>
                 </tbody>
               </table>
