--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -61,7 +61,8 @@
                                          { type: :text, name: :status, classes: "text-gray-500 px-3" },
                                          { type: :text, name: :collections_count, classes: "text-gray-500 px-3" },
                                          { type: :text, name: :text_blocks_count, classes: "text-gray-500 px-3" },
-                                         { type: :link, name: :edit, url_method: -> (**params){ edit_admin_group_path(**params) }, url_params: { id: group.id }, classes: "font-medium text-gray-500" }] %>
+                                         { type: :links, classes: "font-medium text-gray-500 max-w-[60px]", elements: [{ name: :edit, url_method: -> (**params){ edit_admin_group_path(**params) }, url_params: { id: group.id } },
+                                                                                                                       { name: :enter, url_method: -> (**params){ admin_collections_path(**params) }, url_params: { group_id: group.id } }] }] %>
 
 
                   <% end %>
