--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -4,13 +4,11 @@
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <% crumbs = [] %>
     <% if @group %>
-      <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
       <% crumbs << { name: @group.supergroup.name_ka, url: admin_groups_path(supergroup_id: @group.supergroup.id) } %>
       <% crumbs << { name: @group.name_ka, url: admin_collections_path(group_id: @group.id) } %>
     <% end %>
-    <% crumbs << { name: 'კრებულები', url: admin_collections_path(group_id: @group&.id) } %>
 
-    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
+    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs unless crumbs.empty? %>
 
     <%= render 'admin/shared/new_button', name: 'ახალი კრებულის დამატება', url: new_admin_collection_path(group_id: @group&.id) %>
 
