--- a/app/views/admin/collections/new.html.erb
+++ b/app/views/admin/collections/new.html.erb
@@ -8,11 +8,10 @@
       <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
       <% crumbs << { name: @group.supergroup.name_ka, url: admin_groups_path(supergroup_id: @group.supergroup.id) } %>
       <% crumbs << { name: @group.name_ka, url: admin_collections_path(group_id: @group.id) } %>
+      <% crumbs << { name: 'ახალი კრებულის დამატება', url: new_admin_collection_path(group_id: @group&.id) } %>
     <% end %>
-    <% crumbs << { name: 'კრებულები', url: admin_collections_path(group_id: @group&.id) } %>
-    <% crumbs << { name: 'ახალი ჯგუფის დამატება', url: new_admin_collection_path(group_id: @group&.id) } %>
 
-    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
+    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs unless crumbs.empty? %>
 
     <%= render 'admin/collections/shared/form', url: admin_collections_path, method: :post %>
   </div>
