--- a/app/views/admin/groups/new.html.erb
+++ b/app/views/admin/groups/new.html.erb
@@ -5,13 +5,11 @@
 
     <% crumbs = [] %>
     <% if @supergroup %>
-      <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
       <% crumbs << { name: @supergroup.name_ka, url: admin_groups_path(supergroup_id: @supergroup.id) } %>
+      <% crumbs << { name: 'ახალი ჯგუფის დამატება', url: new_admin_group_path(supergroup_id: @supergroup&.id) } %>
     <% end %>
-    <% crumbs << { name: 'ჯგუფები', url: admin_groups_path(supergroup_id: @supergroup&.id) } %>
-    <% crumbs << { name: 'ახალი ჯგუფის დამატება', url: new_admin_group_path(supergroup_id: @supergroup&.id) } %>
 
-    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
+    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs unless crumbs.empty? %>
 
     <%= render 'admin/groups/shared/form', url: admin_groups_path, method: :post %>
   </div>
