--- a/app/views/admin/text_blocks/index.html.erb
+++ b/app/views/admin/text_blocks/index.html.erb
@@ -4,14 +4,12 @@
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <% crumbs = [] %>
     <% if @collection %>
-      <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
       <% crumbs << { name: @collection.supergroup.name_ka, url: admin_groups_path(supergroup_id: @collection.supergroup.id) } %>
       <% crumbs << { name: @collection.group.name_ka, url: admin_collections_path(group_id: @collection.group.id) } %>
       <% crumbs << { name: @collection.name_ka, url: admin_text_blocks_path(collection_id: @collection.id) } %>
     <% end %>
-    <% crumbs << { name: 'ტექსტური წყვილები', url: admin_text_blocks_path(collection_id: @collection&.id) } %>
 
-    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
+    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs unless crumbs.empty? %>
 
     <%= render 'admin/shared/new_button', name: 'ახალი ტექსტური წყვილის დამატება', url: new_admin_text_block_path %>
 
