--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,25 +1,37 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <div class="mt-2 text-sm leading-6">
+    <%= link_to "შესვლა", new_session_path(resource_name), class: "font-semibold text-mountbatten-700 hover:text-mountbatten-500" %>
+  </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <div class="mt-2 text-sm leading-6">
+    <%= link_to "დარეგისტრირება", new_registration_path(resource_name), class: "font-semibold text-mountbatten-700 hover:text-mountbatten-500" %>
+  </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <div class="mt-2 text-sm leading-6">
+    <%= link_to "დაგავიწყდა პაროლი?", new_password_path(resource_name) %>
+  </div>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
+  <div class="mt-2 text-sm leading-6">
+    <%= link_to "არ მიგიღია დადასტურების ინსტრუქცია?", new_confirmation_path(resource_name) %>
+  </div>
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
+  <div class="mt-2 text-sm leading-6">
+    <%= link_to "არ მიგიღია განბლოკვის ინსტრუქცია?", new_unlock_path(resource_name) %>
+  </div>
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <div class="mt-2 text-sm leading-6">
+      <%= button_to "შესვლა #{OmniAuth::Utils.camelize(provider)}თი", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %>
+    </div>
   <% end %>
 <% end %>
