--- a/app/views/admin/collections/shared/_form.html.erb
+++ b/app/views/admin/collections/shared/_form.html.erb
@@ -24,7 +24,13 @@
     <div class="bg-mountbatten-100 px-3 col-span-2 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
         <div class="mt-2 sm:mt-0 w-full">
-          <%= form.collection_select :group_id, Group.all, :id, :name_ka, { selected: @collection.group&.id, inlcude_blank: true }, { required: true, class: "bg-gray-50 border border-mountbatten-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" } %>
+          <%= form.collection_select :author_ids,
+                                     Group.ordered,
+                                     :id,
+                                     :name_ka,
+                                     { selected: @collection.group&.id, inlcude_blank: true },
+                                     { required: true, data: { controller: 'multi-select' } } %>
+          <!-- <%= form.collection_select :group_id, Group.all, :id, :name_ka, { selected: @collection.group&.id, inlcude_blank: true }, { required: true, class: "bg-gray-50 border border-mountbatten-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" } %> -->
         </div>
       </div>
     </div>
