--- a/app/views/admin/collections/shared/_form.html.erb
+++ b/app/views/admin/collections/shared/_form.html.erb
@@ -24,7 +24,7 @@
     <div class="bg-mountbatten-100 px-3 col-span-2 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
         <div class="mt-2 sm:mt-0 w-full">
-          <%= form.collection_select :author_ids,
+          <%= form.collection_select :group_id,
                                      Group.ordered,
                                      :id,
                                      :name_ka,
