--- a/app/views/admin/collections/shared/_form.html.erb
+++ b/app/views/admin/collections/shared/_form.html.erb
@@ -264,13 +264,13 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 rounded-bl-md ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :should_unsync, 'სინქრონიზების მოხსნა', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :should_unsync, 'სინქრონიზება', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 rounded-br-md col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3">
         <div class="mt-2 sm:mt-0">
-          <%= form.check_box :should_unsync, class: "bg-gray-50 border border-gray-300 w-8 h-8 text-gray-900 text-sm text-mountbatten-500 rounded-md focus:ring-offset-0 focus:ring-1 focus:ring-oceanside-500 focus:border-oceanside-500 block dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-oceanside-500" %>
+          <%= form.check_box :should_unsync, { checked: !@collection.should_unsync, class: "bg-gray-50 border border-gray-300 w-8 h-8 text-gray-900 text-sm text-mountbatten-500 rounded-md focus:ring-offset-0 focus:ring-1 focus:ring-oceanside-500 focus:border-oceanside-500 block dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-oceanside-500" }, 0, 1 %>
         </div>
       </div>
     </div>
@@ -279,8 +279,7 @@
   <div class="mt-6 flex justify-stretch grid grid-flow-col gap-x-6 max-w-3xl">
     <%= link_to 'უკან დაბრუნება', admin_collections_path(group_id: (@collection.persisted? ? @collection.group.id : @group&.id)), type: "button", class: "inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200" %>
     <!-- <button type="button" class="inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200">უარყოფა</button> -->
-    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
-    <% if @collection.persisted? %>
+    <% if (current_user.admin? || current_user.superadmin?) && @collection.persisted? %>
       <button type="button"
               data-controller="delete-record"
               data-delete-record-url-value="<%= admin_collection_path(@collection) %>"
@@ -290,5 +289,6 @@
         წაშლა
       </button>
     <% end %>
+    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
   </div>
 <% end %>
