--- a/app/views/admin/groups/shared/_form.html.erb
+++ b/app/views/admin/groups/shared/_form.html.erb
@@ -93,8 +93,7 @@
   <div class="mt-6 flex justify-stretch grid grid-flow-col gap-x-6 max-w-3xl">
     <%= link_to 'უკან დაბრუნება', admin_groups_path(supergroup_id: (@group.persisted? ? @group.supergroup.id : @supergroup&.id)), type: "button", class: "inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200" %>
     <!-- <button type="button" class="inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200">უარყოფა</button> -->
-    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
-    <% if @group.persisted? %>
+    <% if (current_user.admin? || current_user.superadmin?) && @group.persisted? %>
       <button type="button"
               data-controller="delete-record"
               data-delete-record-url-value="<%= admin_group_path(@group) %>"
@@ -104,5 +103,6 @@
         წაშლა
       </button>
     <% end %>
+    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
   </div>
 <% end %>
