Add text splitter

--- a/app/views/admin/text_blocks/index.html.erb
+++ b/app/views/admin/text_blocks/index.html.erb
@@ -11,7 +11,9 @@
 
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs unless crumbs.empty? %>
 
-    <%= render 'admin/shared/new_button', name: 'ახალი ტექსტური წყვილის დამატება', url: new_admin_text_block_path %>
+    <% if @collection && @text_blocks.empty? %>
+      <%= render 'admin/shared/new_button', name: 'ახალი ტექსტური წყვილების დამატება', url: new_text_blocks_admin_collection_path(id: @collection.id) %>
+    <% end %>
 
     <%= render 'admin/shared/paging', records: @text_blocks, url_method: -> (**params){ admin_text_blocks_path(**params) }, paging_params: { collection_id: @collection&.id } %>
     <div class="px-4 sm:px-6 lg:px-8">
